# dpf-pi

./: Cargo.toml  LICENSE  README.md  build.rs  wrapper.c  wrapper.h
.cargo/: config.toml
.github/workflows/: push.yml
src/: api.rs  component.rs  display.rs  dummy.rs  error.rs  ilclient.rs  image.rs  main.rs  picture.rs  pipeline.rs  vc.rs
src/display/: image.rs  power.rs  rect.rs  result.rs
