[package]
name = "digiphoto"
version = "0.1.0"
authors = ["Yuki MIZUNO <mizuyuu0904@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
ctrlc = "3.1.9"
hyper = { version = "0.14.7", features = ["full"] }
tokio = { version = "1.5.0", features = ["full"] }

[build-dependencies]
bindgen = "0.58.1"
cc = "1.0.67"
