[package]
name = "dpf-pi"
version = "0.1.0"
authors = ["Yuki MIZUNO <mizuyuu0904@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { default-features = false, features = ["jpeg", "png", "bmp", "webp"], version = "0.23.14" }
hyper = { version = "0.14.7", features = ["http1", "http2", "server", "runtime"] }
tokio = { version = "1.5.0", features = ["macros", "net", "rt", "rt-multi-thread", "signal"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

[build-dependencies]
bindgen = "0.58.1"
cc = "1.0.67"
