[package]
name = "dpf-pi"
version = "0.1.0"
authors = ["Yuki MIZUNO <mizuyuu0904@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { default-features = false, features = ["jpeg", "png", "bmp", "webp"], version = "0.23.14" }
tokio = { version = "1.5.0", features = ["macros", "net", "rt", "rt-multi-thread", "signal"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
getopts = "0.2.19"
gotham = "0.6.0"
gotham_derive = "0.6.0"
futures = "0.3.1"
mime = "0.3.16"
log = "0.4.14"
env_logger = "0.8.3"

[build-dependencies]
bindgen = "0.58.1"
cc = "1.0.67"
